--- a/ScrumApplication.Web/Views/Project/Create.cshtml
+++ b/ScrumApplication.Web/Views/Project/Create.cshtml
@@ -32,14 +32,18 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.Project.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.Project.EndDate)
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Project.EndDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Project.EndDate, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
-                <span>Sprint Time(Day)</span>
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.Project.DefaultSprintTime)
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Project.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" }, placeholder = "Default sprint days" })
                     @Html.ValidationMessageFor(model => model.Project.DefaultSprintTime, "", new { @class = "text-danger" })
@@ -48,7 +52,9 @@
         </div>
         <div class="col-md-6 col-sm-10">
             <div class="form-group">
-                @Html.LabelFor(model => model.Project.TeamId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.Project.TeamId)
+                </div>
                 <div class="col-md-10">
                     @Html.DropDownListFor(x => Model.Project.TeamId, new SelectList(Model.UserTeams, "TeamId", "Name"),
                                htmlAttributes: new { @class = "form-control", id = "TeamId" })
