--- a/ScrumApplication.Web/Views/User/Account.cshtml
+++ b/ScrumApplication.Web/Views/User/Account.cshtml
@@ -13,13 +13,17 @@
         <div class="row col-md-8">
 
             <div class="form-group col-md-6">
-                @Html.DisplayNameFor(model => model.User.FirstName)
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.User.FirstName)
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.User.FirstName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                 </div>
             </div>
             <div class="form-group col-md-6">
-                @Html.DisplayNameFor(model => model.User.LastName)
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.User.LastName)
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.User.LastName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                 </div>
@@ -34,21 +38,27 @@
                 <h4>Change Password</h4>
             </div>
             <div class="form-group col-md-10">
-                @Html.DisplayNameFor(model => model.CurrentPassword)
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.CurrentPassword)
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.CurrentPassword, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.CurrentPassword, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group col-md-10">
-                @Html.DisplayNameFor(model => model.NewPassword)
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.NewPassword)
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group col-md-10">
-                @Html.DisplayNameFor(model => model.ConfirmNewPassword)
+                <div class="col-md-10" style="margin-bottom:5px;">
+                    @Html.DisplayNameFor(model => model.ConfirmNewPassword)
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.ConfirmNewPassword, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ConfirmNewPassword, "", new { @class = "text-danger" })
