--- a/ScrumApplication.Web/Views/Project/IndexEpic.cshtml
+++ b/ScrumApplication.Web/Views/Project/IndexEpic.cshtml
@@ -2,78 +2,82 @@
 @model List<ScrumApplication.Entity.Models.Epic>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Epics";
 }
 
-<h2>Index</h2>
+<h2>Active Epics</h2>
 
 <p>
     <a href="@Url.Action("CreateEpic", "Project", new { id = Model.FirstOrDefault().ProjectId})" 
        style="margin-top:10px" class="btn btn-primary">Create Epic</a>
 </p>
-
-@if (Model.FirstOrDefault().Name != null)
-{
-    <h4 style="margin-top:20px">Active Tasks</h4>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">
-                    Name
-                </th>
-                <th scope="col">
-                    Priority
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-
-
-        @foreach (var item in Model)
+<div class="col-md-12 col-sm-12">
+    <div class="col-md-12">
+        @if (Model.FirstOrDefault().Name != null)
         {
-            if (!item.IsDone)
-            {
-                <tr>
-                    <th scope="row">
-                        <a href="@Url.Action("EditEpic", "Project", new { id = item.EpicId})" class="btn btn-default">@item.Name</a>
-                        
-                    </th>
-                    <td>
-                        @item.Priority
-                    </td>
-                    <td>
-                        @*<a href="@Url.Action("EditEpic", "Project", new { id = item.EpicId})" class="btn btn-default">Edit</a>*@
-                        @*<a href="@Url.Action("CompleteEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Complete</a>*@
-                        @*<a href="@Url.Action("DeleteEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Delete</a>*@
-                    </td>
-                </tr>
-            }
 
-        }
-        @foreach (var item in Model)
-        {
-            if (item.IsDone)
-            {
-                <tr class="table-active">
-                    <td>
-                        @item.Name
-                    </td>
-                    <td>
-                        @item.Priority
-                    </td>
-                    <td>
-                        @if (TeamRepository.IsProjectManager(item.ProjectId))
-                        {
-                            <a href="@Url.Action("GreenEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Green</a>
-                        }
-                        <a href="@Url.Action("DeleteEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Delete</a>
-                    </td>
-                </tr>
-            }
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">
+                            Name
+                        </th>
+                        <th scope="col">
+                            Priority
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
 
+
+                @foreach (var item in Model)
+                {
+                    if (!item.IsDone)
+                    {
+                        <tr>
+                            <th scope="row">
+                                <a href="@Url.Action("EditEpic", "Project", new { id = item.EpicId})">@item.Name</a>
+
+                            </th>
+                            <td>
+                                @item.Priority
+                            </td>
+                            <td>
+                                @*<a href="@Url.Action("EditEpic", "Project", new { id = item.EpicId})" class="btn btn-default">Edit</a>*@
+                                @*<a href="@Url.Action("CompleteEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Complete</a>*@
+                                @*<a href="@Url.Action("DeleteEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Delete</a>*@
+                            </td>
+                        </tr>
+                    }
+
+                }
+                @foreach (var item in Model)
+                {
+                    if (item.IsDone)
+                    {
+                        <tr class="table-active">
+                            <td>
+                                @item.Name
+                            </td>
+                            <td>
+                                @item.Priority
+                            </td>
+                            <td>
+                                @if (TeamRepository.IsProjectManager(item.ProjectId))
+                                {
+                                    <a href="@Url.Action("GreenEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Green</a>
+                                }
+                                <a href="@Url.Action("DeleteEpic", "Project", new { id = item.EpicId })" class="btn btn-default">Delete</a>
+                            </td>
+                        </tr>
+                    }
+
+                }
+            </table>
         }
-    </table>
-}
+    </div>
+</div>
+
 
 <div>
     <a href="@Url.Action("ProjectHome", "Project", new { id = Model.First().ProjectId }, Request.Url.Scheme)" style="margin-top:20px;" class="btn btn-primary">Go To Project Home</a>
