--- a/ScrumApplication.Web/Views/Team/Index.cshtml
+++ b/ScrumApplication.Web/Views/Team/Index.cshtml
@@ -30,8 +30,8 @@
             <td>
                 <a href="@Url.Action("Select", "Team", new { id = item.TeamId })"
                    class="btn btn-sm btn-primary">Projects</a>
-                <a href="@Url.Action("QuitFromTeam", "Team", new { teamId = item.TeamId })" onclick="return confirm('Are you sure you want to quit from  this team?');"
-                   class="btn btn-sm btn-secondary">Quit</a>
+                @*<a href="@Url.Action("QuitFromTeam", "Team", new { teamId = item.TeamId })" onclick="return confirm('Are you sure you want to quit from  this team?');"
+                   class="btn btn-sm btn-secondary">Quit</a>*@
             </td>
             </tr>
         }
